--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=3000
-MONGODB_URI=mongodb://localhost:27017/careclick
-JWT_SECRET=your_jwt_secret_key
+PORT =4000
+MONGODB_URI=mongodb+srv://mynewuser:VVZcSgNFjoaIz07D@cluster0.xk8il7z.mongodb.net/careclick
+JWT_SECRET=gyuioyuikmn345mdomlkjh
 NODE_ENV=development
